# bazel-linting-system

./: .gitignore  BUILD  DESIGN.md  README.md  WORKSPACE  apply_changes.sh  generator.bzl  lint.bzl  lint.sh.TEMPLATE  mirror_sources.sh  rules.bzl
apply_changes/: BUILD  main.go
examples/: .bazelignore  BUILD  WORKSPACE  ci-lint-check.sh  lint.sh
examples/golang/: BUILD  main.go  main_test.go
examples/jsonnet/: BUILD  cocktails.jsonnet  martinis.libsonnet
examples/python/: BUILD  main.py  stuff.py
examples/python/inner/: BUILD  inside.py
examples/ruby/: BUILD  hello.rb
examples/tools/linting/: BUILD  aspect.bzl
examples/tools/linting/configuration/: pyproject.toml
examples/tools/linting/nix/: BUILD  rubocop.nix
examples/typescript/: package.json
examples/typescript/src/components/Card/: BUILD
examples/typescript/src/components/Snackbar/: BUILD
examples/typescript/src/demo/: BUILD.bazel
examples/typescript/src/demo/components/Snackbar/: BUILD.bazel  Snackbar.tsx
repositories/: go_repositories.bzl  repositories.bzl
